<!--
  ~ Copyright (c) 2023. Ingo Noka
  ~ This file belongs to project cba9-driver.
  ~ This work is licensed under the Creative Commons Attribution-NonCommercial-NoDerivs 3.0 Unported License.
  ~ To view a copy of this license, visit http://creativecommons.org/licenses/by-nc-nd/3.0/ or send a letter to
  ~ Creative Commons, PO Box 1866, Mountain View, CA 94042, USA.
  ~
  -->

<resources>
    <string name="app_name">CBA9 Driver Demo</string>
    <string name="cba9StateLabel">CBA9 State</string>
    <string name="fillLevelLabel">Fill Level</string>
    <string name="serialNumberLabel">Serial Number</string>
    <string name="datasetVersionLabel">Data Set Version</string>
    <string name="protocolVersionLabel">Protocol Version</string>
    <string name="rejectBanknoteButton">Reject</string>
    <string name="acceptBanknoteButton">Accept</string>
    <string name="na">N/A</string>
    <string name="fillLevel" translatable="false">%1$s %2$d / (%3$d)</string>
</resources>