<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2023. Ingo Noka
  ~ This file belongs to project cba9-driver.
  ~ This work is licensed under the Creative Commons Attribution-NonCommercial-NoDerivs 3.0 Unported License.
  ~ To view a copy of this license, visit http://creativecommons.org/licenses/by-nc-nd/3.0/ or send a letter to
  ~ Creative Commons, PO Box 1866, Mountain View, CA 94042, USA.
  ~
  -->

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button
            android:text="@string/rejectBanknoteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonRejectBanknote"
            app:layout_constraintBottom_toBottomOf="parent" android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:insetBottom="0dp" android:insetTop="0dp" android:insetLeft="0dp" android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toStartOf="@+id/buttonAcceptBanknote" android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/acceptBanknoteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonAcceptBanknote"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:insetBottom="0dp" android:insetTop="0dp" android:insetLeft="0dp"
            android:layout_marginBottom="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="137dp" android:id="@+id/guideline2"/>
    <TextView
            android:text="@string/cba9StateLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textViewCba9StateLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/fillLevelLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textViewFillLevelLabel"
            app:layout_constraintTop_toBottomOf="@+id/textViewCba9StateLabel" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/serialNumberLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textViewSerialNumberLabel"
            app:layout_constraintTop_toBottomOf="@+id/textViewFillLevelLabel" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/datasetVersionLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textViewDataSetVersionLabel"
            app:layout_constraintTop_toBottomOf="@+id/textViewSerialNumberLabel" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/protocolVersionLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textViewProtocolVersionLabel"
            app:layout_constraintTop_toBottomOf="@+id/textViewDataSetVersionLabel" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/na"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textViewCba9StateValue"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline3" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/na"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textViewFillLevelValue"
            app:layout_constraintTop_toBottomOf="@+id/textViewCba9StateValue" app:layout_constraintStart_toStartOf="@+id/guideline2"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline3"/>
    <TextView
            android:text="@string/na"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textViewSerialNumberValue"
            app:layout_constraintTop_toBottomOf="@+id/textViewFillLevelValue" app:layout_constraintStart_toStartOf="@+id/guideline2"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline3"/>
    <TextView
            android:text="@string/na"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textViewDataSetVersionValue"
            app:layout_constraintTop_toBottomOf="@+id/textViewSerialNumberValue" app:layout_constraintStart_toStartOf="@+id/guideline2"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline3"/>
    <TextView
            android:text="@string/na"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textViewProtocolVersionValue"
            app:layout_constraintTop_toBottomOf="@+id/textViewDataSetVersionValue" app:layout_constraintStart_toStartOf="@+id/guideline2"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline3"/>
    <TextView
            android:text="@string/na"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/textViewBanknote"
            app:layout_constraintStart_toStartOf="@+id/guideline3" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:isScrollContainer="false" app:layout_constraintBottom_toTopOf="@+id/buttonAcceptBanknote" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp" android:textSize="96sp"
            android:textAlignment="center" android:autoSizeMaxTextSize="96sp" android:autoSizeMinTextSize="12sp" android:autoSizeTextType="uniform"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="242dp" android:id="@+id/guideline3"/>
</androidx.constraintlayout.widget.ConstraintLayout>